# HackTheCrous.crawler

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  controller.ts  cron_script.ts  cron_script_restaurants.ts  docker-compose.yml  environment.d.ts  go.mod  go.sum  index.ts  main.go  package-lock.json  package.json  scraper.ts  tsconfig.json  types.ts
.github/workflows/: build-images.yml
cmd/: restaurant.go  root.go
controllers/: database.go  meal.go  restaurant.go
dashboards/: logs.json
helm/: tag.yaml  values.yaml
helm/templates/: CronJob.yaml  Job.yaml
migrations/: 20240722221022_init.sql  20250108124905_add-point-hash.sql  20250117230903_restaurant-school.sql
scripts/: create_table.sh  create_tables.sql
src/: main.rs
src/cli/: mod.rs
src/cli/actions/: bootstrap.rs  meals.rs  mod.rs  ping.rs  restaurants.rs  schools.rs  up.rs
src/models/: keywords.rs  meals.rs  mod.rs  restaurants.rs  schools.rs
src/telemetry/: log.rs
utils/: env.go
